--- a/users/templates/Receipt.html
+++ b/users/templates/Receipt.html
@@ -16,17 +16,20 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
+                                        <a href="{% url 'export_receipts' %}"> <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa fa-download fa-lg" aria-hidden="true"></i>&nbsp; &nbsp;Export</button></a>
                                         <div class="btn-group">
                                             <div class="form-group">
                                         <form class="form-inline my-2 my-lg-0" action="{% url 'Receipts'%}">
-                                        <input id="demo-input-search2" type="text" name="search" placeholder="Search by MeterNUmber" class="form-control" autocomplete="off">
+                                        <input id="demo-input-search2" type="text" name="search" placeholder="Search by Names" class="form-control" autocomplete="off">
                                         <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
                                         </form>
                                         </div>
                                    
                                             
                                         </div>
+
                                     </div>
+
                                 </div>
                             </div>
                             <div class="table-responsive">
@@ -44,7 +47,7 @@
                                             
                                             
                                         </tr>
-                                    </thead>
+                                    </thead> 
                                     <tbody>
                                     {% for history in page_obj %}
                                     <tr>
