--- a/users/templates/notdeliveredorder.html
+++ b/users/templates/notdeliveredorder.html
@@ -16,6 +16,16 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
+                                        <div class="btn-group">
+                                            <div class="form-group">
+                                        <form class="form-inline my-2 my-lg-0" action="{% url 'notdeliveredpage'%}">
+                                        <input id="demo-input-search2" type="text" name="search" placeholder="Search by name" class="form-control" autocomplete="off">
+                                        <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i></buttn>
+                                        </form>
+                                        </div>
+                                   
+                                            
+                                        </div>
 
                                     </div>
                                 </div>
