--- a/users/templates/pay_later_orders.html
+++ b/users/templates/pay_later_orders.html
@@ -6,7 +6,7 @@
                     
 					<div class="panel">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Orders that are going to be paid later</h3>
+                            <h3 class="panel-title">Orders to be paid later</h3>
                         </div>
                     
                         <!--Data Table-->
@@ -16,6 +16,17 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
+
+                                        <div class="btn-group">
+                                            <div class="form-group">
+                                        <form class="form-inline my-2 my-lg-0" action="{% url 'pay_later_orders'%}">
+                                        <input id="demo-input-search2" type="text" name="search" placeholder="Search by name" class="form-control" autocomplete="off">
+                                        <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i></buttn>
+                                        </form>
+                                        </div>
+                                   
+                                            
+                                        </div>
 
                                     </div>
                                 </div>
