--- a/users/templates/Receipt.html
+++ b/users/templates/Receipt.html
@@ -16,17 +16,33 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
-                                        <a href="{% url 'export_receipts' %}"> <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa fa-download fa-lg" aria-hidden="true"></i>&nbsp; &nbsp;Export</button></a>
+                                        
                                         <div class="btn-group">
                                             <div class="form-group">
+    
+                                                <form class="form-inline my-2 my-lg-0" method="POST" action= "{% url 'Receipts' %}">
+                                                    {% csrf_token %}
+                                                <b>From:</b>&nbsp;&nbsp; <input  type="date" name="start"  class="form-control" autocomplete="off" style="height:35px" required>&nbsp;&nbsp;
+                                                <b>TO:</b>&nbsp;&nbsp; <input  type="date" name="end"  class="form-control" autocomplete="off" style="height:35px" required>
+                                                <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fa fa-filter" aria-hidden="true"></i></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                </form>
+                                            </div>
+                                        </div>
+                                        
+                                        
+                                        
+                                        <div class="btn-group">
+                                            
+                                        <div class="form-group">
                                         <form class="form-inline my-2 my-lg-0" action="{% url 'Receipts'%}">
                                         <input id="demo-input-search2" type="text" name="search" placeholder="Search by Names" class="form-control" autocomplete="off">
-                                        <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
+                                        <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                         </form>
                                         </div>
                                    
                                             
                                         </div>
+                                        <a href="{% url 'export_receipts' %}"> <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa fa-download fa-lg" aria-hidden="true"></i>&nbsp; &nbsp;Export</button></a>
 
                                     </div>
 
@@ -57,7 +73,7 @@
                                             <td>{{history.Amount}} Rwf</td>
                                             <td>{{history.Amount}}Ltr</td>
                                             <td>{{history.Token}}</td>
-                                            <td>{{history.created_at}}</td>
+                                            <td>{{history.created_at|date:'d/m/Y'}}</td>
                                             <td>
                                             <a class="btn-link" href="{% url 'sendToken' history.id%}"><button class="btn btn-warning">Send Token</button></a>
                                             </td>
