--- a/users/templates/blogview.html
+++ b/users/templates/blogview.html
@@ -57,6 +57,17 @@
                                             <td>{{blog.Published_at}}</td> 
                                             <td>
 
+                                                {% if  blog.publish %}
+                                                <a onclick="return confirm('Are you sure you want to Unpublish this blog?')" href="{% url 'publishblog' blog.id %}">
+                                                <button class="btn btn-success">Publish</button>
+                                                </a>
+                                            {% else %}
+                                                <a onclick="return confirm('Are you sure you want to Publish this blog?')" href="{% url 'unpublish' blog.id %}">
+                                                <button class="btn btn-warning">Unpublish</button>
+                                                </a>
+                                            {% endif %}
+
+
                                                 <a href="{% url 'updateBlog' blog.id %}">
                                                     <button class="btn btn-primary">Update</button>
                                                     </a>
