--- a/users/templates/CustomerBoard.html
+++ b/users/templates/CustomerBoard.html
@@ -82,8 +82,8 @@
                 <!--Brand logo & name-->
                 <!--================================-->
                 <div class="navbar-header">
-                    <a href="index.html" class="navbar-brand">
-                        <img src="{% static  "img/logo.png" %}" class="brand-icon" >
+                    <a href="#" class="navbar-brand">
+                        
                         <div class="brand-title">
                             <span class="brand-text">Water Access Rwanda</span>
                         </div>
