--- a/users/templates/approve_sub.html
+++ b/users/templates/approve_sub.html
@@ -27,7 +27,7 @@
                                             </div>
                                               <div class="col-sm-12">
                                                             <div class="form-group">
-                                                            <label class="control-label">Discount on system 1</label>
+                                                            <label class="control-label">Discount on system 1 <b style="color:#38b3f5;">(in percentage)</b></label>
                                                             <input type="text" value='0' class="form-control" name="discount" required>   
                                                         </div>
                                                 </div>
