--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -365,7 +365,7 @@
                                         <a href="{% url 'Receipts' %}">
                                             <i class="fa fa-money"></i>
                                             <span class="menu-title">
-                                                <strong>Receipts</strong>
+                                                <strong>Water Receipts</strong>
                                                 
                                             </span>
                                         </a>
