--- a/users/templates/dashboard.html
+++ b/users/templates/dashboard.html
@@ -116,7 +116,7 @@
 					                        </div>
 					                        <div class="media-body">
 										<p class="text-2x mar-no text-semibold">{{allsoldlitre}}</p>
-					                            <p class="mar-no">All Sold litres</p>
+					                            <p class="mar-no">All litres sold</p>
 					                        </div>
 					                    </div>
 					                </div>
@@ -211,7 +211,7 @@
 					                        </div>
 					                        <div class="media-body">
 										<p class="text-2x mar-no text-semibold">{{weeklysoldlitre}}</p>
-					                            <p class="mar-no">Weekly Sold litres</p>
+					                            <p class="mar-no">This week litres Sold</p>
 					                        </div>
 					                    </div>
 					                </div>
@@ -307,7 +307,7 @@
 					                        </div>
 					                        <div class="media-body">
 										<p class="text-2x mar-no text-semibold">{{dailysoldlitre}}</p>
-					                            <p class="mar-no">Daily Sold litres</p>
+					                            <p class="mar-no">Today litres Sold</p>
 					                        </div>
 					                    </div>
 					                </div>
