--- a/users/templates/orders.html
+++ b/users/templates/orders.html
@@ -70,7 +70,7 @@
                                                 </a>
                                                 {% else %}
                                                 <a onclick="return confirm('Are you sure you want to comfirm this?')" href="{% url 'deliveredorder' order.id %}">
-                                                <button class="btn btn-warning">Not delivery</button>
+                                                <button class="btn btn-warning">Not delivered</button>
                                                 </a>
                                             {% endif %}
 
