--- a/users/templates/CustomerTransaction.html
+++ b/users/templates/CustomerTransaction.html
@@ -89,8 +89,7 @@
                 <!--Brand logo & name-->
                 <!--================================-->
                 <div class="navbar-header">
-                    <a href="index.html" class="navbar-brand">
-                        <img src="{% static "img/logo.png" %}" alt="Nifty Logo" class="brand-icon">
+                    <a href="#" class="navbar-brand">
                         <div class="brand-title">
                             <span class="brand-text">Water Access Rwanda </span>
                         </div>
