--- a/users/templates/catridgesorder.html
+++ b/users/templates/catridgesorder.html
@@ -71,7 +71,7 @@
                                                 </a>
                                                 {% else %}
                                                 <a onclick="return confirm('Are you sure you want to comfirm this?')" href="{% url 'deliveredordercatridge' order.id %}">
-                                                <button class="btn btn-warning">Not delivery</button>
+                                                <button class="btn btn-warning">Not delivered</button>
                                                 </a>
                                             {% endif %}
                                             </td>
