--- a/users/templates/new_subscriptions.html
+++ b/users/templates/new_subscriptions.html
@@ -17,6 +17,22 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
+
+                                        <div class="form-group">
+                                            <form class="form-inline my-2 my-lg-0" method="POST" action="{% url 'new_subscriptions'%}">
+                                                {% csrf_token %}
+                                            <select  name="service" class="js-example-basic-single2 form-control">
+                                               <option value="Amazi">Search by Service</option>
+                                               <option value="All">All</option>
+                                               {% for category in categories%}
+
+                                                       <option value="{{category.Title}}">{{category.Title}}</option> 
+                                                {% endfor %}
+                                            </select> 
+                                            <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fa fa-filter" aria-hidden="true"></i></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            <form class="form-inline my-2 my-lg-0">
+                                        
+                                        </div>
                                         
 
                                         <div class="btn-group">
