--- a/users/templates/new_subscriptions.html
+++ b/users/templates/new_subscriptions.html
@@ -30,8 +30,7 @@
                                                 {% endfor %}
                                             </select> 
                                             <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fa fa-filter" aria-hidden="true"></i></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                            <form class="form-inline my-2 my-lg-0">
-                                        
+                                            </form>                                        
                                         </div>
                                         
 
