--- a/users/templates/Subscriptions.html
+++ b/users/templates/Subscriptions.html
@@ -98,7 +98,7 @@
 
                                         
                                             <td> 
-                                                {% if sub.Category.Title == "Amazi" %}
+                                                {% if sub.Category.Title == "AMAZI" %}
                                                 
                                                 <a class="btn-link" href="{% url 'quotation' sub.id%}"><button class="btn btn-primary">View</button></a>
                                                 
