--- a/users/templates/Addnewproduct.html
+++ b/users/templates/Addnewproduct.html
@@ -15,18 +15,27 @@
                                 {% csrf_token %}
                                     <div class="panel-body">
                                         <div class="row">
-                                            <div class="col-sm-6">
+                                            <div class="col-sm-12">
                                                 <div class="form-group">
                                                     <label class="control-label">Product Name</label>
                                                     <input type="text" class="form-control" name="name"> 
                                                 </div>
                                             </div>
+                                        </div>
+                                        <div class="row">
                                             <div class="col-sm-6">
                                                 <div class="form-group">
                                                     <label class="control-label">Price</label>
                                                     <input type="text" class="form-control" name="price">
                                                 </div>
                                             </div>
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label class="control-label">Discount</label>
+                                                    <input type="text" value="0" class="form-control" name="discount">
+                                                </div>
+                                            </div>
+
                                         </div>
                                         <div class="row">
                                             <div class="col-sm-6">
