--- a/users/templates/products.html
+++ b/users/templates/products.html
@@ -39,6 +39,7 @@
                                             <th>Image</th>
                                             <th>Name</th>
                                             <th>Price</th>
+                                            <th>Discount</th>
                                             <th>InStock</th>
                                             <th>Actions</th>
                                             
@@ -53,6 +54,7 @@
                                             </td>
                                             <td>{{product.name}}</td>
                                             <td>{{product.price|intcomma}} Rwf</td>
+                                            <td>{{product.discount|intcomma}} Rwf</td>
                                             <td>{{product.inStock}}</td>
                                             
                                             <td>
