--- a/users/templates/create_system.html
+++ b/users/templates/create_system.html
@@ -57,7 +57,7 @@
                                             
                                             
                                             <h3>Tools</h3>
-                                            <div class="row" style="margin:10px" id='tools1'>
+                                            <div class="row" style="margin-top:20px;margin-left:30px;" id='tools1'>
                                             
                                               {% for tool in tools%}
                                             <div class="col-sm-2">
@@ -80,7 +80,7 @@
 
                                     </div>
                                     <div class="panel-footer text-right">
-                                        <button class="btn btn-block btn-success" type="submit">Checkout</button>
+                                        <button class="btn btn-block btn-success" type="submit">Submit</button>
                                     </div>
                                 </form>
                                 <!--===================================================-->
