--- a/users/templates/update_system.html
+++ b/users/templates/update_system.html
@@ -53,6 +53,32 @@
                                                 </div>
                                             </div>
                                         </div>
+
+                                        <h4>Tools <b style="color:#38b3f5;"> (this system has all checked tools)</b> </h4>
+                                            <div class="row" style="margin-top:20px;margin-left:30px;" id='tools1'>
+                                            
+                                              {% for tool in tools%}
+                                            <div class="col-sm-2">
+                                                <div class="checkbox">
+                                                    {% if tool in systemtools2 %}
+                                                    <input id="demo-remember-me" value={{tool.id}} class="magic-checkbox" type="checkbox" checked>
+                                                    {% else %}
+                                                    <input id="demo-remember-me" value={{tool.id}} class="magic-checkbox" type="checkbox">
+                                                    {% endif %}
+                                                    <label for="demo-remember-me">{{tool.Title}}</label>
+                                                </div>
+                                            </div>
+                                            {% endfor %}  
+
+                                            </div>
+
+
+                                            <div class="col-sm-12">
+                                                <div class="form-group">
+                                                    <label for="demo-inline-inputmail" class="sr-only">Tools</label>
+                                                    <input style="display:none" type="text" name="tools" id="tools" class="form-control">
+                                                </div>
+                                            </div>
                                     </div>
                                     <div class="panel-footer text-right">
                                         <button class="btn btn-block btn-success" type="submit">Submit</button>
@@ -70,5 +96,108 @@
 					
 					
                 </div>
+
+
+                <script>
+                    //var my_func=()=>{
+                     //   var tools= "{{ my_tools }}" 
+                     //   var tii=JSON.parse(tools.replace(/&#x27;/g,'"'));
+                     //   console.log(tii)
+                    //}
+                    function populate(s1,s2){
+                        var s1 = document.getElementById(s1);
+                        var s2 = document.getElementById(s2);
+                        s2.innerHTML = "";
+                        if(s1.value){
+                            var optionArray = ["|"];
+                            var systems= "{{ systems }}" 
+                            var sys=JSON.parse(systems.replace(/&#x27;/g,'"')).filter(sys=>s1.value==sys.category)
+                            for(var i=0;i<sys.length;i++){
+                            optionArray.push(sys[i].title+'|'+sys[i].title)
+                            }
+                        }
+                        
+                        for(var option in optionArray){
+                            var pair = optionArray[option].split("|");
+                            var newOption = document.createElement("option");
+                            newOption.value = pair[0];
+                            newOption.innerHTML = pair[1];
+                            s2.options.add(newOption);
+                        }
+                    }
+                    function populate2(s1,s2){
+                        var s1 = document.getElementById(s1);
+                        var s2 = document.getElementById(s2);
+                        var myDiv = document.getElementById("tools1");
+                        myDiv.innerHTML = "";
+                        console.log(s1.value)
+                        if(s1.value){
+                            
+                            console.log('ok')
+                            var optionArray = [];
+                            var sys_tools= "{{ amazi_tools }}" 
+                            var tools=JSON.parse(sys_tools.replace(/&#x27;/g,'"')).filter(tool => s1.value==tool.system)
+                            for(var i=0;i<tools.length;i++){
+                                console.log('ok')
+                            optionArray.push(tools[i])
+                            }
+                    
+                         console.log(optionArray)
+                        } 
+                        else {
+                            console.log('ok')
+                            var optionArray = [];
+                            var myDiv = document.getElementById("tools1");
+                            myDiv.innerHTML=""
+                         console.log(optionArray)
+                        } 
+                        var inp = document.getElementById("tools");
+                        inp.value=""
+                        for(var option in optionArray){
+                            console.log(optionArray[option])
+                                var myDiv = document.getElementById("tools1");
+                                //myDiv.className='checkbox'
+                                var myTitle = document.getElementById("my_title");
+                                 myTitle.innerHTML='TOOLS'
+                                // creating checkbox element
+                                var checkbox = document.createElement('input');
+                                 
+                                // Assigning the attributes
+                                // to created checkbox
+                                checkbox.type = "checkbox";
+                                checkbox.className="magic-checkbox";
+                                checkbox.name = 'tools';
+                                checkbox.value = optionArray[option].title;
+                                checkbox.id = "demo-remember-me";
+                                
+                                 
+                                // creating label for checkbox
+                                var label = document.createElement('label');
+                                 
+                                // assigning attributes for
+                                // the created label tag
+                                label.htmlFor = "demo-remember-me";
+                                label.style = "margin-right:10px";
+                                 
+                                // appending the created text to
+                                // the created label tag
+                                label.appendChild(document.createTextNode(optionArray[option].title));
+                                 
+                                // appending the checkbox
+                                // and label to div
+                                myDiv.appendChild(checkbox);
+                                myDiv.appendChild(label);
+                        }
+                    }
+                     var check=()=>{
+                                $('.magic-checkbox').click(function(){
+                                    var text="";
+                                    $('.magic-checkbox:checked').each(function(){
+                                        text+=$(this).val()+','
+                                    });
+                                    $('#tools').val(text);
+                                })
+                            }
+                    </script>
 
 {% endblock content%}
